fixed horizontal overflow

--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ html {
 	color: white;
 	display: flex;
 	flex-direction: row;
+	overflow: hidden;
 }
 #cover-content > div {
 	z-index: 9999;
